test: cover untested shared UI hooks in the Selenium IT suite
An audit of the Selenium IT suite (continuation of #205) found shared
data-testid hooks documented in CLAUDE.md that no test exercised. Add a
behavioral IT for each on a representative resource (the hooks belong to
shared components, so covering them once exercises every caller):

- detail-page delete and download (resource-detail__delete/__download)
- scale-down caret (replicas-field__decrement)
- editor Cancel discards without persisting (resource-edit__cancel)
- clearing the namespace filter (filter-bar__all-namespaces)
- Node Memory dial requested value (the #205 follow-up)

Expose the browser download directory from SeleniumTestResource as a
config property so the download action can be verified black-box.

Refs #205

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Signed-off-by: Marc Nuri <marc@marcnuri.com>